--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "express-validator": "^7.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "prisma": "^6.5.0",
