--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=8888
 DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
 JWT_SECRET_KEY=
-JWT_EXPIRES_IN=
+JWT_EXPIRES_IN=7days
